[gd_scene load_steps=10 format=3 uid="uid://dduddv6vqx38o"]

[ext_resource type="Script" path="res://Script/hoop.gd" id="1_eoab1"]
[ext_resource type="Texture2D" uid="uid://cqbam8jmide8t" path="res://Assets/hoop_by_me.png" id="2_4d5me"]
[ext_resource type="PackedScene" uid="uid://fnaob522eka0" path="res://Assets/check_mark.tscn" id="3_5gqqi"]
[ext_resource type="AudioStream" uid="uid://cl3r74iup2tlp" path="res://Sound and Music/ting_1-47612.mp3" id="4_uwlfa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wad8t"]
radius = 7.0
height = 124.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hlx7g"]
absorbent = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mio2u"]
size = Vector2(48.4698, 7.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4mmnw"]
radius = 4.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifpf6"]
size = Vector2(52, 3.625)

[node name="Hoop" type="Node2D"]
script = ExtResource("1_eoab1")

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["Board"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(49, -16)
shape = SubResource("CapsuleShape2D_wad8t")

[node name="BodyCollsion" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_hlx7g")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BodyCollsion"]
position = Vector2(34, 2)
rotation = -0.106857
shape = SubResource("RectangleShape2D_mio2u")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BodyCollsion"]
position = Vector2(-49, 4)
shape = SubResource("CapsuleShape2D_4mmnw")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BodyCollsion"]
position = Vector2(16, 37)
rotation = 1.70248
scale = Vector2(0.957203, 0.567094)
shape = SubResource("RectangleShape2D_mio2u")

[node name="Trigger1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger1"]
position = Vector2(-16, 8)
shape = SubResource("RectangleShape2D_ifpf6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 3)
scale = Vector2(0.329104, 0.312706)
texture = ExtResource("2_4d5me")
region_rect = Rect2(73, 12.5, 135.534, 186.532)

[node name="Trigger2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger2"]
position = Vector2(-15, 44)
shape = SubResource("RectangleShape2D_ifpf6")

[node name="Wrong_hoop_reset_timer" type="Timer" parent="."]
wait_time = 2.5

[node name="CheckMark" parent="." instance=ExtResource("3_5gqqi")]
visible = false
position = Vector2(-16, -32)
time = 1.4
dis = 13

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uwlfa")
volume_db = -10.0

[connection signal="body_entered" from="Trigger1" to="." method="_on_trigger_enter"]
[connection signal="body_entered" from="Trigger2" to="." method="_on_trigger_2_body_entered"]
[connection signal="timeout" from="Wrong_hoop_reset_timer" to="." method="_on_wrong_hoop_reset_timer_timeout"]
